--- a/AdoNetSqliteLINQ/AdoNetSqliteLINQ.csproj
+++ b/AdoNetSqliteLINQ/AdoNetSqliteLINQ.csproj
@@ -14,4 +14,10 @@
     <PackageReference Include="System.Data.SqlClient" Version="4.8.6" />
   </ItemGroup>
 
+  <ItemGroup>
+    <None Update="NorthwindSQLite.sqlite">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
